--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,14 +1,57 @@
+# =========================
+# Alacritty Configuration
+# Gruvbox Dark Theme
+# =========================
+
 [window]
-decorations = "Transparent"
-opacity = 0.5
+decorations = "full"
+padding = { x = 15, y = 15 }
+opacity = 0.95
 blur = true
-padding = { x = 20, y = 40 }
 
 [font]
-size = 15.0
-normal = { family = "FiraCode Nerd Font", style = "Regular"}
-bold = { family = "FiraCode Nerd Font", style = "Bold" }
-italic = { family = "FiraCode Nerd Font", style = "Italic" }
+size = 16.0
 
-# Enable ligatures (optional but recommended for coding fonts)
-#enable_ligatures = true
+[font.normal]
+family = "JetBrainsMono Nerd Font"
+style = "Regular"
+
+[font.bold]
+family = "JetBrainsMono Nerd Font"
+style = "Bold"
+
+[font.italic]
+family = "JetBrainsMono Nerd Font"
+style = "Italic"
+
+[colors.primary]
+background = "#282828"
+foreground = "#ebdbb2"
+
+[colors.normal]
+black   = "#282828"
+red     = "#cc241d"
+green   = "#98971a"
+yellow  = "#d79921"
+blue    = "#458588"
+magenta = "#b16286"
+cyan    = "#689d6a"
+white   = "#a89984"
+
+[colors.bright]
+black   = "#928374"
+red     = "#fb4934"
+green   = "#b8bb26"
+yellow  = "#fabd2f"
+blue    = "#83a598"
+magenta = "#d3869b"
+cyan    = "#8ec07c"
+white   = "#ebdbb2"
+
+[colors.cursor]
+text = "#282828"
+cursor = "#ebdbb2"
+
+[colors.selection]
+text = "#282828"
+background = "#ebdbb2"
